--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
+
+
 {
-  "name": "website-chat-app",
+  "name": "chat-to-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +11,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.6.8",
-    "@upstash/rag-chat": "^2.0.3",
-    "@upstash/redis": "^1.34.3",
-    "ai": "^4.0.20",
-    "class-variance-authority": "^0.7.1",
+    "@nextui-org/react": "^2.4.6",
+    "@upstash/rag-chat": "latest",
+    "@upstash/redis": "^1.34.0",
+    "@upstash/vector": "^1.1.7",
+    "ai": "^3.3.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.468.0",
-    "next": "14",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.5",
+    "lucide-react": "^0.424.0",
+    "next": "14.2.11",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
